# chess_engine

./: .gitignore  CMakeLists.txt  Move.cpp  README.md  movegen.cpp
src/: Board.cpp  Board.hpp  MagicFinder.hpp  MagicSearcher.hpp  Move.cpp  Move.hpp  MoveFlag.hpp  MoveList.hpp  Piece.hpp  Square.hpp  bitboards.cpp  bitboards.hpp  eval.cpp  eval.hpp  magic_searcher.cpp  magic_searcher.hpp  main.cpp  mcts.cpp  mcts.hpp  movegen.cpp  movegen.hpp  precomputedMoveData.hpp  search.cpp  search.hpp  tests.cpp  tests.hpp  utils.hpp
